--- a/Labs/Week05_ANOVA1_Lab.Rmd
+++ b/Labs/Week05_ANOVA1_Lab.Rmd
@@ -202,6 +202,64 @@ You'll obviously need a whole number of participants, so you should round up. To
 
 ## Experiment 1 Data Review
 
+### Your Tasks
+
++ [ ] $\ $ Import 'Week5LabData1.csv' into SPSS
+
++ [ ] $\ $ Check whether all variables imported into SPSS as the correct measurement type. 
+
++ [ ] $\ $ Check the descriptive statistics of your data
+
++ [ ] $\ $ Produce the proper plot to visualise the distribution of your dependent variable, `Correct`.
+
++ [ ] $\ $ Add a key to the `Gender` variable so that 1 = 'Female' and 2 = 'Male'.
+
+
+<div class="container">
+<details><summary><span style = "font-weight: bold; font-size: 16pt"> Click here for a hint </span></summary>
+
+For continuous variables, the descriptive statistics you'll want to check are mean and standard deviation. It's also useful to check the minimum and maximum so you can easily identify values outside of your expected range. For categorical variables, you'll check the frequency of participants in each group. It may also be useful to check the mode.
+
+Your dependent variable, `Correct`, is continuous. Consider whether either a bar plot or a histogram is more appropriate for use with continuous variables. 
+
+</details>
+</div>
+</br>
+
+<div class="container">
+<details><summary><span style = "font-weight: bold; font-size: 16pt"> Click here for the solution </span></summary>
+
+<span style = "font-weight: bold; font-size: 14pt"> Adjust Variable Measure Format </span>
+
+To check that your variables are labeled as the correct scale of measurement, look at the **Measure** column under the *Variable View* tab.
+
+* `ID` - Ordinal
+
+* `Gender` - Nominal
+
+* `Age` - Scale
+
+* `Group` - Nominal
+
+* `Correct` - Scale
+
+In this instance, SPSS assigned the proper measures by default, so no changes are needed.
+
+<span style = "font-weight: bold; font-size: 14pt"> Adding Labels to Variables </span>
+
+To associate a label with each value of a variable, you'll use the **Values** column under the **Variable View** tab.
+
+Select the Gender x Values cell and click the dots to bring up the _Value Labels_ box. Use the $+$ to add a new label. In the Value column, type the value **exactly as it is recorded in your data.** In the Label column, add the label you would like to associate with that specific value. Continue adding labels using  $+$ until you've labeled all values in the Gender column.
+
+```{r, echo = F, out.width='40%', fig.align='center'}
+knitr::include_graphics('images/week5_GenderLabels.png')
+```
+
+Click 'OK'. If you've done this properly, you'll see that each numeric value is now associated with a character label.
+</details>
+</div>
+</br>
+
 ## Experiment 1 Assumptions
 
 The requirements/assumptions of a One-Way ANOVA are:
@@ -296,7 +354,7 @@ Find the box in the output labeled 'Test of Homogeneity of Variance' and check t
 
 
 
-## Experiment 2
+## Experiment 2 Overview
 In the second experiment, you investigated whether a mask differentially effects a child's ability to recognize specific emotions. You recruited a new sample of primary-school aged children. All participants were presented with photos of masked people making stereotypical facial expressions associated with 5 different emotions (happiness, sadness, fear, anger, disgust). All participants viewed 50 photos per emotion. Photos were presented in random order for each participant. 
 
 You can download the dataset from the second experiment [here](https://mtruelovehill.github.io/PRM/Labs/Week5LabData2.csv). It contains the following variables:
